<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/orders" />
        <item
            android:id="@+id/monitoring"
            android:icon="@drawable/ic_monitoring"
            android:title="@string/monitoring" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_information"
            android:title="@string/information" />
    </group>

</menu>
