<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#80ffffff"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/logoutDataContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_white"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="66dp"
        android:paddingEnd="66dp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        >

        <TextView
            android:id="@+id/logoutSnippet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:lineSpacingExtra="3sp"
            android:gravity="center_horizontal"
            android:text="Are you shure to exit in accaunt"
            style="@style/cerapro"
            android:fontFamily="@font/cera_pro_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/logoutDoorIc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/logoutSnippet"
            android:src="@drawable/logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="26dp"
            />


        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoutDoorIc"
            app:layout_constraintEnd_toEndOf="parent"
            >


            <ImageView
                android:id="@+id/avatar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/user_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/contactContainer"
                android:layout_marginTop="32dp"
                />

            <LinearLayout
                android:id="@+id/contactContainer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="12dp"
                >

                <TextView
                    android:id="@+id/nav_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    style="@style/cerapro"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/mark_twain"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#b2b2b2"
                    android:lineSpacingExtra="9sp"
                    android:text="@string/nav_number"
                    style="@style/cerapro"
                    android:layout_marginTop="3dp"
                    />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logoutDataContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginTop="50dp"
        >

        <Button
            android:id="@+id/logoutCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="55dp"
            android:text="@string/cancel"
            android:background="@drawable/button_white"
            android:foreground="@drawable/ripple_button"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:fontFamily="@font/cera_pro_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/logoutExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="65dp"
            android:text="@string/exit"
            android:background="@drawable/button_primary"
            android:foreground="@drawable/ripple_button"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/cera_pro_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>